crates/solidity-v2/testing/snapshots/diagnostics_output/semantic/linearisation_impossible/interface/generated/slang/0.8.0-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Diagnostics: 1

Error: Linearization of inheritance graph is impossible.
   ╭─[input.sol:8:1]
   │
 8 │ interface ListsA is Sub, ParentA {}
   │ ─────────────────┬─────────────────  
   │                  ╰─────────────────── Error occurred here.
───╯
